// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card when has a content 1`] = `
<article
  className="flex undefined sc-bdVaJa bZmLVk"
>
  <div>
    The card's content
  </div>
</article>
`;

exports[`Storyshots Card when has a title 1`] = `
<article
  className="flex undefined sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
</article>
`;

exports[`Storyshots Card when has both title and content 1`] = `
<article
  className="flex undefined sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
  <div>
    The card's content
  </div>
</article>
`;

exports[`Storyshots Card when is completely empty 1`] = `
<article
  className="flex undefined sc-bdVaJa bZmLVk"
/>
`;

exports[`Storyshots WeatherCard when something went wrong 1`] = `
<article
  className="flex sc-fjdhpX ewbmre sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
  <div
    className="flex sc-jzJRlG bJGuIR"
  >
    <div
      className="flex sc-htpNat hLwoui"
      direction="column"
    >
      <div
        className="flex sc-VigVT hsCCzl"
      >
        Something went wrong
      </div>
      <button
        className="flex sc-jTzLTM gbXKAY"
        onClick={[Function]}
        type="button"
      >
        Try Again
      </button>
    </div>
  </div>
</article>
`;

exports[`Storyshots WeatherCard when something went wrong with the main card 1`] = `
<article
  className="flex sc-fjdhpX lbOYeQ sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
  <div
    className="flex sc-jzJRlG bJGuIR"
  >
    <div
      className="flex sc-htpNat hLwoui"
      direction="column"
    >
      <div
        className="flex sc-VigVT hsCCzl"
      >
        Something went wrong
      </div>
      <button
        className="flex sc-jTzLTM gbXKAY"
        onClick={[Function]}
        type="button"
      >
        Try Again
      </button>
    </div>
  </div>
</article>
`;

exports[`Storyshots WeatherCard when the main card weather is cold 1`] = `
<article
  className="flex sc-fjdhpX lbOYeQ sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
  <div
    className="flex sc-jzJRlG bJGuIR"
  >
    <div
      className="flex sc-ifAKCX qHQFp"
    >
      <span
        className="flex sc-bZQynM cZXHjN sc-EHOje fwffcz"
        value={3}
      >
        3
      </span>
      <span
        className="flex sc-gzVnrw eGXRWR sc-EHOje fwffcz"
        value={3}
      >
        °
      </span>
    </div>
    <div
      className="flex sc-gZMcBi hAITDv"
      type="main"
    >
      <div
        className="flex sc-htpNat gcsSGe"
        direction="row"
      >
        <div
          className="flex sc-htpNat cQEGwB"
          direction="column"
        >
          <div
            className="sc-htoDjs koBdvF sc-htpNat WNImK"
            direction="row"
          >
            Humidity
          </div>
          <div
            className="flex sc-htpNat WNImK"
            direction="row"
          >
            <span
              className="sc-dnqmqq cvjfGs"
            >
              84
            </span>
            <span
              className="sc-iwsKbI bkIwlD"
            >
              %
            </span>
          </div>
        </div>
        <div
          className="flex sc-htpNat cQEGwB"
          direction="column"
        >
          <div
            className="sc-htoDjs koBdvF sc-htpNat WNImK"
            direction="row"
          >
            Pressure
          </div>
          <div
            className="flex sc-htpNat WNImK"
            direction="row"
          >
            <span
              className="sc-dnqmqq cvjfGs"
            >
              955
            </span>
            <span
              className="sc-iwsKbI bkIwlD"
            >
              hPa
            </span>
          </div>
        </div>
      </div>
      <div
        className="flex sc-htpNat fYveYQ"
        direction="row"
      >
        <span
          className="sc-gqjmRU ffOYjx"
          type="main"
        >
          Updated at 
          10:51:00 PM
        </span>
      </div>
    </div>
  </div>
</article>
`;

exports[`Storyshots WeatherCard when the main card weather is hot 1`] = `
<article
  className="flex sc-fjdhpX lbOYeQ sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
  <div
    className="flex sc-jzJRlG bJGuIR"
  >
    <div
      className="flex sc-ifAKCX qHQFp"
    >
      <span
        className="flex sc-bZQynM cZXHjN sc-EHOje zXHDr"
        value={30}
      >
        30
      </span>
      <span
        className="flex sc-gzVnrw eGXRWR sc-EHOje zXHDr"
        value={30}
      >
        °
      </span>
    </div>
    <div
      className="flex sc-gZMcBi hAITDv"
      type="main"
    >
      <div
        className="flex sc-htpNat gcsSGe"
        direction="row"
      >
        <div
          className="flex sc-htpNat cQEGwB"
          direction="column"
        >
          <div
            className="sc-htoDjs koBdvF sc-htpNat WNImK"
            direction="row"
          >
            Humidity
          </div>
          <div
            className="flex sc-htpNat WNImK"
            direction="row"
          >
            <span
              className="sc-dnqmqq cvjfGs"
            >
              67
            </span>
            <span
              className="sc-iwsKbI bkIwlD"
            >
              %
            </span>
          </div>
        </div>
        <div
          className="flex sc-htpNat cQEGwB"
          direction="column"
        >
          <div
            className="sc-htoDjs koBdvF sc-htpNat WNImK"
            direction="row"
          >
            Pressure
          </div>
          <div
            className="flex sc-htpNat WNImK"
            direction="row"
          >
            <span
              className="sc-dnqmqq cvjfGs"
            >
              837
            </span>
            <span
              className="sc-iwsKbI bkIwlD"
            >
              hPa
            </span>
          </div>
        </div>
      </div>
      <div
        className="flex sc-htpNat fYveYQ"
        direction="row"
      >
        <span
          className="sc-gqjmRU ffOYjx"
          type="main"
        >
          Updated at 
          10:51:00 PM
        </span>
      </div>
    </div>
  </div>
</article>
`;

exports[`Storyshots WeatherCard when the main card weather is normal 1`] = `
<article
  className="flex sc-fjdhpX lbOYeQ sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
  <div
    className="flex sc-jzJRlG bJGuIR"
  >
    <div
      className="flex sc-ifAKCX qHQFp"
    >
      <span
        className="flex sc-bZQynM cZXHjN sc-EHOje jwUnvU"
        value={20}
      >
        20
      </span>
      <span
        className="flex sc-gzVnrw eGXRWR sc-EHOje jwUnvU"
        value={20}
      >
        °
      </span>
    </div>
    <div
      className="flex sc-gZMcBi hAITDv"
      type="main"
    >
      <div
        className="flex sc-htpNat gcsSGe"
        direction="row"
      >
        <div
          className="flex sc-htpNat cQEGwB"
          direction="column"
        >
          <div
            className="sc-htoDjs koBdvF sc-htpNat WNImK"
            direction="row"
          >
            Humidity
          </div>
          <div
            className="flex sc-htpNat WNImK"
            direction="row"
          >
            <span
              className="sc-dnqmqq cvjfGs"
            >
              70
            </span>
            <span
              className="sc-iwsKbI bkIwlD"
            >
              %
            </span>
          </div>
        </div>
        <div
          className="flex sc-htpNat cQEGwB"
          direction="column"
        >
          <div
            className="sc-htoDjs koBdvF sc-htpNat WNImK"
            direction="row"
          >
            Pressure
          </div>
          <div
            className="flex sc-htpNat WNImK"
            direction="row"
          >
            <span
              className="sc-dnqmqq cvjfGs"
            >
              890
            </span>
            <span
              className="sc-iwsKbI bkIwlD"
            >
              hPa
            </span>
          </div>
        </div>
      </div>
      <div
        className="flex sc-htpNat fYveYQ"
        direction="row"
      >
        <span
          className="sc-gqjmRU ffOYjx"
          type="main"
        >
          Updated at 
          10:51:00 PM
        </span>
      </div>
    </div>
  </div>
</article>
`;

exports[`Storyshots WeatherCard when the main card weather value is loading 1`] = `
<article
  className="flex sc-fjdhpX lbOYeQ sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
  <div
    className="flex sc-jzJRlG bJGuIR"
  >
    <div
      className="flex sc-htpNat hLwoui"
      direction="column"
    >
      <img
        alt="Loading"
        className="flex sc-bxivhb gdnUgh"
        src="loading.svg"
      />
    </div>
  </div>
</article>
`;

exports[`Storyshots WeatherCard when the weather is cold 1`] = `
<article
  className="flex sc-fjdhpX ewbmre sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
  <div
    className="flex sc-jzJRlG bJGuIR"
  >
    <div
      className="flex sc-ifAKCX qHQFp"
    >
      <span
        className="flex sc-bZQynM cZXHjN sc-EHOje fwffcz"
        value={3}
      >
        3
      </span>
      <span
        className="flex sc-gzVnrw eGXRWR sc-EHOje fwffcz"
        value={3}
      >
        °
      </span>
    </div>
    <div
      className="flex sc-gZMcBi hlYHSO"
      type="alt"
    >
      <div
        className="flex sc-htpNat fYveYQ"
        direction="row"
      >
        <span
          className="sc-gqjmRU eCALHE"
          type="alt"
        >
          Updated at 
          10:51:00 PM
        </span>
      </div>
    </div>
  </div>
</article>
`;

exports[`Storyshots WeatherCard when the weather is hot 1`] = `
<article
  className="flex sc-fjdhpX ewbmre sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
  <div
    className="flex sc-jzJRlG bJGuIR"
  >
    <div
      className="flex sc-ifAKCX qHQFp"
    >
      <span
        className="flex sc-bZQynM cZXHjN sc-EHOje zXHDr"
        value={30}
      >
        30
      </span>
      <span
        className="flex sc-gzVnrw eGXRWR sc-EHOje zXHDr"
        value={30}
      >
        °
      </span>
    </div>
    <div
      className="flex sc-gZMcBi hlYHSO"
      type="alt"
    >
      <div
        className="flex sc-htpNat fYveYQ"
        direction="row"
      >
        <span
          className="sc-gqjmRU eCALHE"
          type="alt"
        >
          Updated at 
          10:51:00 PM
        </span>
      </div>
    </div>
  </div>
</article>
`;

exports[`Storyshots WeatherCard when the weather is normal 1`] = `
<article
  className="flex sc-fjdhpX ewbmre sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
  <div
    className="flex sc-jzJRlG bJGuIR"
  >
    <div
      className="flex sc-ifAKCX qHQFp"
    >
      <span
        className="flex sc-bZQynM cZXHjN sc-EHOje jwUnvU"
        value={20}
      >
        20
      </span>
      <span
        className="flex sc-gzVnrw eGXRWR sc-EHOje jwUnvU"
        value={20}
      >
        °
      </span>
    </div>
    <div
      className="flex sc-gZMcBi hlYHSO"
      type="alt"
    >
      <div
        className="flex sc-htpNat fYveYQ"
        direction="row"
      >
        <span
          className="sc-gqjmRU eCALHE"
          type="alt"
        >
          Updated at 
          10:51:00 PM
        </span>
      </div>
    </div>
  </div>
</article>
`;

exports[`Storyshots WeatherCard when the weather value is loading 1`] = `
<article
  className="flex sc-fjdhpX ewbmre sc-bdVaJa bZmLVk"
>
  <h3
    className="flex sc-bwzfXH lkZqCK"
  >
    City, CC
  </h3>
  <div
    className="flex sc-jzJRlG bJGuIR"
  >
    <div
      className="flex sc-htpNat hLwoui"
      direction="column"
    >
      <img
        alt="Loading"
        className="flex sc-bxivhb gdnUgh"
        src="loading.svg"
      />
    </div>
  </div>
</article>
`;
